--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
         "vue-i18n": "^8.24.2",
         "vue-json-viewer": "^2.2.18",
         "vue-router": "^3.5.1",
+        "vue-upload-drop-images": "^1.0.5",
         "vue2-editor": "^2.10.2",
         "vuedraggable": "^2.24.3",
         "vuetify": "^2.4.8",
