--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
         "js-cookie": "^2.2.1",
         "nprogress": "^0.2.0",
         "path": "^0.12.7",
+        "quill": "^1.3.7",
+        "quill-image-resize-module": "^3.0.0",
         "sortablejs": "^1.13.0",
         "swiper": "^6.5.0",
         "validator": "^13.5.2",
@@ -39,6 +41,7 @@
         "vue-i18n": "^8.24.2",
         "vue-json-viewer": "^2.2.18",
         "vue-router": "^3.5.1",
+        "vue-sortable": "^0.1.3",
         "vue-upload-drop-images": "^1.0.5",
         "vue2-editor": "^2.10.2",
         "vuedraggable": "^2.24.3",
